<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="recipeDetailViewModel"
            type="com.jj.android.shoprecipemanagement.viewmodel.RecipeDetailViewModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/actionBarImage"
                android:layout_width="62dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/mainBarTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/addRecipe"
                android:textColor="@color/recipeDetailTitleColor"
                android:textSize="16dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="@+id/actionBarImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/materialAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/ic_add_circle"
                android:layout_marginRight="4dp"
                android:background="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="4dp"
            android:background="@color/barColor"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipeNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            style="@style/ProcessingMaterialTitleBox"
            android:paddingRight="4dp"
            android:paddingLeft="4dp"
            android:textColorHint="@color/livingCoral"
            app:hintTextColor="@color/livingCoral"
            android:hint="@string/addRecipeName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeNameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="14dp"
                android:background="@null"/>

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipeDetailRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            recipeDetailData="@{recipeDetailViewModel.dataList}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/brightRed"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                android:text="@string/delete"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/rightGray"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                android:text="@string/cancel"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/lightGreen"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                android:text="@string/add"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>