<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/titleText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:maxLines="1"
            android:inputType="text"
            android:textColor="@color/dialogTitleColor"
            android:textSize="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/barColor"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/usageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_weight="2"
                android:padding="4dp"
                android:text="@string/usageMaterialWeight"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginRight="4dp"
                android:padding="4dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inputUsage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:background="@null"
                    android:textSize="15dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/barColor"/>

            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/predictPriceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_weight="2"
                android:padding="4dp"
                android:text="@string/predictPrice"
                android:textColor="@color/red"
                android:textSize="14dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/predictPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_weight="3"
                android:background="@null"
                android:maxLines="1"
                android:padding="4dp"
                android:textSize="14dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/materialListSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:textColor="@color/textColor" />


            <Button
                android:id="@+id/materialAddButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="88dp"
                android:layout_height="match_parent"
                android:text="@string/add"
                android:textColor="@color/menuBack" />

        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>